cmake_minimum_required(VERSION 3.27)
project(Cweek_11)

set(CMAKE_CXX_STANDARD 14)

add_executable(Cweek_11
        union_pra.cpp
        static_clock.cpp)
add_executable(individual_acc individual_acc.cpp)
add_executable(name_spcae name_space.cpp)
add_executable(static_ static_.cpp)
add_executable(glob_ static_clock.cpp)
add_executable(count_point count_point.cpp)
add_executable(cla_static_func cla_static_func.cpp)
add_executable(friend friend_.cpp)
add_executable(const_pra const_pra1.cpp)
