cmake_minimum_required(VERSION 3.27)
project(Cweek_5)

set(CMAKE_CXX_STANDARD 14)

add_executable(Cweek_5
        ELSFK.cpp)
add_executable(polymorphic_ polymorphic_.cpp)
add_executable(data_abstraction data_abstraction.cpp)
add_executable(Shape_ Shape.cpp)
add_executable(f_stream f_stream.cpp)
add_executable(f_tesr fs_test.cpp)
add_executable(fs_test_t file_test_t.cpp)
add_executable(try_other_ try_other_.cpp)
add_executable(binary_ binary_file.cpp)
add_executable(exception_ Exception_handling.cpp)
