cmake_minimum_required(VERSION 3.27)
project(Cweek_5)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_EXE_LINKER_FLAGS "-static")

add_executable(Cweek_5
        ELSFK.cpp)
add_executable(polymorphic_ polymorphic_.cpp)
add_executable(data_abstraction data_abstraction.cpp)
add_executable(Shape_ Shape.cpp)
add_executable(f_stream f_stream.cpp)
add_executable(f_tesr fs_test.cpp)
add_executable(fs_test_t file_test_t.cpp)
add_executable(try_other_ try_other_.cpp)
add_executable(binary_ binary_file.cpp)
add_executable(exception_ Exception_handling.cpp)
add_executable(reload_excep reload_exception.cpp)
add_executable(dynamic_ dynamic_memory.cpp)
add_executable(multi_de multi_demensional_dy.cpp)
add_executable(dynamic_obj dynamic_obj.cpp)
add_executable(name_space name_space.cpp)
add_executable(using_name using_name.cpp)
add_executable(func_model function_model.cpp)
add_executable(class_model class_model.cpp)
add_executable(preprocess_ preprocess_.cpp)
add_executable(well_operator well_operator_.cpp)
add_executable(signal_handle signal_handle.cpp)
add_executable(generate_signal generate_signal.cpp)
add_executable(cre_exi_threads cre_exi_threads.cpp)
add_executable(incoming_para incoming_para_threads.cpp)
add_executable(struct_threads struct_threas.cpp)
add_executable(join_detach_thr jion_detach_threads.cpp)
add_executable(standard_thread standard_threads.cpp)
